add: update incident payload
